[package]
name = "surf"
version = "0.0.7"
authors = ["Prasanna Loganathar <pvl@prasannavl.com>"]
edition = "2018"
description = "Helpers and middleware collection for tide"
homepage = "https://github.com/quixon-labs/surf"
repository = "https://github.com/quixon-labs/surf"
readme = "README.md"
keywords = [ "tide", "middleware", "helpers", "utils" ]
categories = [ "network-programming", "web-programming" ]
license = "Apache-2.0"

[dependencies]
tide = "0.0.5"
http = "0.1.17"
http-service = "0.1.4"
futures-preview = "0.3.0-alpha.13"
lazy_static = "1.3.0"
bytes = "0.4.12"
log = "0.4.6"
